do flag of Ethiopia

--- a/html/home.html
+++ b/html/home.html
@@ -18,8 +18,86 @@
         <img src="../images/PG_home_final-1.png" alt="family image">
     </div>
     <img class="beauty" src="../images/download.svg" alt="">
-
-    
+<!-- here -->
+    <div class="payground-app">
+        <img src="../images/Home_screen-mock_edit.png" alt="home screen photo">
+        <div class="app-description">
+            <h1>Pay bills on your time with <br> one simple login</h1>
+            <h3>Easy manage payments to multiple providers and reduce <br> stress around medical bills</h3>
+            <div class="store-icons">
+                <a href="https://apps.apple.com/us/app/payground/id1576559175">
+                    <img src="../images/app store.png" alt="app store icon">
+                </a>
+                <a href="https://play.google.com/store/apps/details?id=com.payground">
+                    <img src="../images/google-play-icon-download-23.jpg" alt="play store icon">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="discription2">
+        <h1>A people-first approach to <br> healthcare payments.
+        </h1>
+        <h3>Say goodbye to endless paper statements, various patient portals, and long</h3>
+        <h3> phone waits.</h3>
+    </div>
+    <div class="cards">
+        <div class="card1">
+            <h1>"</h1>
+            <h2>I have my hands full with two little ones, <br> and viewing and paying our medical bills <br> on the go and with a couple of clicks has <br> been a game changer!</h3>
+            <h2> - Aimee L., PayGround user</h3>
+        </div>
+        <div class="card2">
+            <h1>"</h1>
+            <h2>The app led me through the process in a <br> very straightforward way. It guided me <br> from entering provider information all the <br> way to submitting my payment in three <br> easy steps!</h3>
+            <h2> - Mike B., PayGround user</h3>
+        </div>
+        <div class="card3">
+            <h1>"</h1>
+            <h2>PayGround is so easy to use, and has <br> made paying healthcare bills for all my <br> family's various providers so much more <br> efficient.</h3>
+            <h2> - Shelby B., PayGround user</h3>
+        </div>
+    </div>
+    <div class="discription3">
+        <h1>Why pay with PayGround?</h1>
+        <h2>You have more important things to focus on. Let PayGround take the stress of</h2>
+        <h2>managing medical bills off your shoulders.</h2>
+    </div>
+    <div class="goals">
+        <div class="time">
+            <img src="../images/PayGround-Microsite-Illustration-01-Save-Time.svg" alt="clock image">
+            <h1>Save time.</h1>
+            <h2>Pay medical bills from multiple providers in one place and on your time.</h2>
+        </div>
+        <div class="rest">
+            <img src="../images/PayGround-Microsite-Illustration-02-Rest-Easy.svg" alt="mobile icon">
+            <h1>Rest easy.</h1>
+            <h2>View and pay bills with just a few clicks on our simple and secure mobile app. The app is free to use!</h2>
+        </div>
+        <div class="stress">
+            <img src="../images/PayGround-Microsite-Illustration-03-Stress-Less.svg" alt="calander img">
+            <h1>Stress less.</h1>
+            <h2>Schedule payments, view invoices, and track billing history in your digital dashboard.</h2>
+        </div>
+    </div>
+    <div class="live-payground">
+        <h1>Healthcare payments made easy.<sup>TM</sup></h1>
+        <h2>A secure way to manage, track, and pay-so you can focus on the good stuff.</h2>
+        <button>
+            <h2>get PayGround</h2>
+        </button>
+        <img src="../images/Home_banner-2-EDIT-1.jpg" alt="">
+    </div>
+    <div class="fourdoctors">
+        <div class="discription3">
+            <h2 class="question">Are you a Medical provider?</h2>
+            <h1>Acccept payments with PayGround</h1>
+            <h2>Improve collections, reduce costs, and boost patient satisfaction with our advanced payment platform.</h2>
+            <button>
+                <h2>Demo the platform</h2>
+            </button>
+        </div>
+        <img src="../images/PG_Accept-Payments.jpg" alt="doctor photo">
+    </div>
     
 </body>
 </html>
