--- a/html/flags.html
+++ b/html/flags.html
@@ -8,12 +8,29 @@
     <link rel="stylesheet" href="../css/flag.css">
 </head>
 <body>
-    <div class="Ethiopia">
-        <div class="green"></div>
-        <div class="yellow"></div>
-        <div class="red"></div>
-        <div class="star"></div>
+    <div class="flags">
+        <div class="Ethiopia">
+            <div class="green"></div>
+            <div class="yellow"></div>
+            <div class="red"></div>
+            <div class="triangle1"></div>
+            <div class="triangle2"></div>
+        </div>
+        <div class="south-africa">
+            <div class="south-red"></div>
+            <div class="south-white"></div>
+            <div class="south-green"></div>
+            <div class="south-blue"></div>
+            <div class="south-white2"></div>
+            <div class="south-green2"></div>
+            <div class="south-yellow"></div>
+            <div class="south-black"></div>
+            
+        </div>
+        <div class="costa rica">
+            <div class="blue1"></div>
+            
+        </div>
     </div>
-   
 </body>
 </html>
