add costarica flag

--- a/html/flags.html
+++ b/html/flags.html
@@ -28,8 +28,10 @@
             
         </div>
         <div class="costa rica">
-            <div class="blue1"></div>
-            
+            <div class="costa-blue1"></div>
+            <div class="costa-red"></div>
+            <div class="costa-blue2"></div>
+
         </div>
     </div>
 </body>
