correct south africa flag

--- a/html/header.html
+++ b/html/header.html
@@ -12,7 +12,7 @@
             <nav>
                 <a class="Payground" href="header.html">payground</a>
                 <div class="nav2">
-                    <a>Exercise 1</a>
+                    <a href="../html/flags.html" target="_blank" rel="noopener noreferrer">Exercise 1</a>
                     <div class="dropdown">
                         <div class="dropbtn">
                             <a>I'm a medical provider</a>
